unpackaged/main/default/objects/Agent_LSD_Update_notification__e/Agent_LSD_Update_notification__e.object-meta.xml
<CustomObject>
    <description>Notify workAto about agent LSD update</description>
    <label>Agent LSD Update notification</label>
    <pluralLabel>Agent LSD Update notifications</pluralLabel>
</CustomObject>