unpackaged/main/default/objects/Agent_LSD_Update_notification__e/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>