unpackaged/main/default/objects/Agent_LSD_Update_notification__e/fields/AgentNet_ID__c.field-meta.xml
<CustomField>
    <fullName>AgentNet_ID__c</fullName>
    <label>AgentNet ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>