unpackaged/main/default/objects/Agent_LSD_Update_notification__e/fields/Loyalty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Start_Date__c</fullName>
    <label>Loyalty Start Date</label>
    <type>Date</type>
</CustomField>