unpackaged/main/default/objects/Agent_LSD_Update_notification__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Stores the information regarding the update of Agnet LSD</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>